# autoscience

./: .gitattributes  .gitignore  DESIGN.md  GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  autoscience-architecture-diagram.html  autoscience-architecture.html  autoscience-gap-audit.html  autoscience-requirements.html  complete_background_scientific_cognition_system_build_blueprint.md  install.sh  main.py  pyproject.toml  reference_projects_and_full_system_build_plan.md  start.sh  test_api.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_create_all_tables.py  002_add_cascade_deletes.py  004_add_cascade_deletes.py  20260604_1900_362797c00b74_add_cognitive_metrics_to_research_run.py  20260604_2106_2dec90e74d12_add_references_to_paper.py  20260604_2116_24fc296a2de1_add_manuscript_model.py  20260604_2156_d7fd02f2bc42_add_run_id_to_clusters_and_conflicts.py  20260604_2235_12d878b35fce_add_current_phase_to_research_run.py  20260703_1200_a1b2c3d4e5f6_add_step_history_to_research_run.py  20260703_1400_b2c3d4e5f6a7_add_run_id_to_analysis_run.py  20260703_1600_c3d4e5f6a7b8_add_pgvector_embedding_column.py  20260703_1800_d4e5f6a7b8c9_add_run_id_to_knowledge_note.py  20260703_2000_e5f6a7b8c9d0_add_collaboration_tables.py  20260703_2200_f6a7b8c9d0e1_add_review_proposals.py  20260709_1700_f7a8b9c0d1e2_add_organization_tables.py  (+1 more)
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/agents/: __init__.py  (+1 more)
backend/scripts/: benchmark_nightly.sh  benchmark_smoke.py  init_e2e_db.py  verify_migrations.py  verify_pgvector.py
backend/tests/: conftest.py
(+354 files in other folders)
