[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoscience"
version = "0.1.0"
description = "Background Scientific Cognition System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlmodel>=0.0.16",

    # Cache and queue
    "redis[hiredis]>=5.0.0",

    # HTTP client
    "httpx>=0.26.0",

    # Validation and settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # LLM providers
    "openai>=1.12.0",
    "anthropic>=0.18.0",

    # Embeddings
    "sentence-transformers>=2.3.0",
    "pgvector>=0.2.4",

    # Academic API clients
    "semanticscholar>=0.4.0",

    # Task scheduling
    "apscheduler>=3.10.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
sandbox = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
